--- a/{{ cookiecutter.repo_name }}/.devcontainer/environment.yml
+++ b/{{ cookiecutter.repo_name }}/.devcontainer/environment.yml
@@ -27,8 +27,9 @@ dependencies:
   - nbdev
   - pandera
   - panel
+  - pandas-profiling
   - pip:
       - torch
       - torchvision
-      - pandera
       - attrs
+      - black
