added extra files

--- a/{{ cookiecutter.repo_name }}/.devcontainer/environment.yml
+++ b/{{ cookiecutter.repo_name }}/.devcontainer/environment.yml
@@ -28,8 +28,10 @@ dependencies:
   - pandera
   - panel
   - pandas-profiling
+  - tqdm
   - pip:
       - torch
       - torchvision
       - attrs
       - black
+      - snakeviz
